Configured helm